# BuckUtils

./: .gitignore  Makefile  README.md  buckutils.spec  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: windows-build.yml
src/buckutils/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_combiner.py  test_streamlit_app.py
