[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buckutils"
version = "0.1.0"
description = "A simple, grandpa-friendly PDF utility for combining and renaming PDF files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Austin", email = "austin@example.com" }
]
keywords = ["pdf", "combine", "merge", "utility", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "pypdf>=4.0.0",
    "pypdfium2>=4.30.0",
    "pillow>=10.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pyinstaller>=5.0",
]

[project.scripts]
buckutils = "buckutils:main"

[project.gui-scripts]
buckutils-gui = "buckutils:main"

[project.urls]
Homepage = "https://github.com/Austin-s-h/BuckUtils"
Repository = "https://github.com/Austin-s-h/BuckUtils"
Issues = "https://github.com/Austin-s-h/BuckUtils/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/buckutils"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py38"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["buckutils"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "S101"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "pypdf.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
