[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Austin", email = "austin@example.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
description = "A simple, grandpa-friendly PDF utility for combining and renaming PDF files"
keywords = ["pdf", "combine", "merge", "utility", "gui"]
license = "MIT"
name = "buckutils"
readme = "README.md"
requires-python = ">=3.9"
version = "0.2.0"

dependencies = [
  "pypdf>=4.0.0",
  "pypdfium2>=4.30.0",
  "pillow>=10.0.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pyinstaller>=5.0",
  "streamlit-desktop-app>=0.3.4",
]

[project.scripts]
buckutils = "buckutils:main"

[project.gui-scripts]
buckutils-gui = "buckutils:main"

[project.urls]
Homepage = "https://github.com/Austin-s-h/BuckUtils"
Issues = "https://github.com/Austin-s-h/BuckUtils/issues"
Repository = "https://github.com/Austin-s-h/BuckUtils"

[tool.hatch.build.targets.wheel]
packages = ["src/buckutils"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
  "B905", # zip without strict= (Python 3.10+)
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # Pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "PTH", # flake8-use-pathlib
  "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["buckutils"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "S101"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["src"]
python_version = "3.9"
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pypdf.*",
]

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
